jetty + wicket + spring integration + spring security + spring-jpa + derby embedded working fine as multi-tier maven multimodule project!!!!

--- a/eudevfin/dim/src/main/java/org/devgateway/eudevfin/dim/ItemsPage.html
+++ b/eudevfin/dim/src/main/java/org/devgateway/eudevfin/dim/ItemsPage.html
@@ -7,8 +7,8 @@
 <body>
 
 
-	<span wicket:id="items"> <span wicket:id="product">1/1/2004</span><br>
-			<span wicket:id="quantity">Comment text goes here.</span></span>
+	<span wicket:id="items"> <span wicket:id="name">1/1/2004</span><br>
+			<span wicket:id="id">Comment text goes here.</span></span>
 
 </body>
 
