testing persistence of linked JPA domain objects

--- a/eudevfin/dim/src/main/java/org/devgateway/eudevfin/dim/ItemsPage.html
+++ b/eudevfin/dim/src/main/java/org/devgateway/eudevfin/dim/ItemsPage.html
@@ -18,7 +18,9 @@ Contributors:
 
 
 	<span wicket:id="items"> <span wicket:id="name">1/1/2004</span><br>
-			<span wicket:id="id">Comment text goes here.</span></span>
+	span wicket:id="id">Comment text goes here.</span></span>
+	<p/>
+	<a href="#" wicket:id="modifyPerson">modify person</a>
 
 </body>
 
