--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/pages/HeaderFooter.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/core/pages/HeaderFooter.html
@@ -12,6 +12,7 @@
 
 <html wicket:id="html" xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <head>
+    <meta charset="utf-8"/>
     <meta wicket:id="viewport">
     <meta wicket:id="chrome-frame">
 </head>
