--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/LoginPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/LoginPage.html
@@ -1,40 +1,34 @@
-<!-- 
-Copyright (c) 2013 Development Gateway.
-All rights reserved. This program and the accompanying materials
-are made available under the terms of the GNU Public License v3.0
-which accompanies this distribution, and is available at
-http://www.gnu.org/licenses/gpl.html
-
-Contributors:
-   mpostelnicu
--->
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:wicket="http://wicket.apache.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <head>
-<title>Authentication</title>
+    <wicket:message key="login.title" />
 </head>
 <body>
+    <wicket:extend>
+        <header class="jumbotron subhead" id="overview">
+            <div class="container">
+                <h1>Welcome to EU-DEVFIN</h1>
+                <p class="lead">Lorem ipsum bla bla bla bla bla.</p>
+            </div>
+        </header>
 
-	<form wicket:id="loginform">
-		<table>
-			<tr>
-				<td><h3>Login:</h3></td>
-				<td><input wicket:id="username" type="text" /></td>
-			</tr>
-			<tr>
-				<td><h3>Password:</h3></td>
-				<td><input wicket:id="password" type="password" /></td>
-			</tr>
-			<tr>
-				<td></td>
-				<td><input type="submit" value="Login" /></td>
-			</tr>
-			<tr>
-				<td></td>
-				<td><div wicket:id="feedback"></div></td>
-			</tr>
-		</table>
-	</form>
+        <div class="container">
+            <div class="row">
+                <div class="span4">
+                    <section id="login">
+                        <form wicket:id="loginform">
+                            <fieldset>
+                                <div wicket:id="username"/>
+                                <div wicket:id="password"/>
+
+                                <button type="submit" class="btn">Submit</button>
+                            </fieldset>
+                        </form>
+
+                    </section>
+                </div>
+            </div>
+        </div>
+    </wicket:extend>
 </body>
 </html>
