--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/HomePage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/HomePage.html
@@ -16,7 +16,26 @@
 </head>
 <body>
     <wicket:extend>
-
+		<div>
+		<table id="settings">
+			<tr>
+				<td>Transaction id</td>
+				<td>Transaction value</td>
+				<td>Organization name</td>
+			</tr>
+			<tr wicket:id="transaction-list">
+				<td>
+					<span wicket:id="transaction-id">-1</span>
+				</td>
+				<td>
+					<span wicket:id="transaction-value">0</span>
+				</td>
+				<td>
+					<span wicket:id="organization-name">unspecified</span>
+				</td>
+			</tr>
+		</table>
+	</div>
     </wicket:extend>
 </body>
 </html>
