--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/LoginPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/LoginPage.html
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (c) 2013 Development Gateway.
+  ~ All rights reserved. This program and the accompanying materials
+  ~ are made available under the terms of the GNU Public License v3.0
+  ~ which accompanies this distribution, and is available at
+  ~ http://www.gnu.org/licenses/gpl.html
+  ~
+  ~ Contributors:
+  ~    aartimon
+  -->
+
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <head>
     <wicket:message key="login.title" />
@@ -14,18 +25,17 @@
 
         <div class="container">
             <div class="row">
-                <div class="span4">
-                    <section id="login">
-                        <form wicket:id="loginform">
-                            <fieldset>
-                                <div wicket:id="username"/>
-                                <div wicket:id="password"/>
-
-                                <button type="submit" class="btn">Submit</button>
-                            </fieldset>
-                        </form>
-
-                    </section>
+                <div class="span4 offset4 well">
+                    <legend>Please Sign In</legend>
+                    <form wicket:id="loginform">
+                        <div wicket:id="feedback" />
+                        <div wicket:id="username"/>
+                        <div wicket:id="password"/>
+                        <label class="checkbox">
+                            <input type="checkbox" name="remember" value="1" /> Remember Me
+                        </label>
+                        <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
