dim: added r/w ComponentPropertyModel         integrated jasny input mask         using nightly wicket-bootstrap 0.8.5         fixed transaction model not updating         fixed some validation problem         added ajax submit button with functionality to redirect to the first tab that has problems with validation, but all fields with validation issues will be highlighted

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/TransactionPage.html
@@ -12,30 +12,30 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
-    <wicket:extend>
+<wicket:extend>
 
-        <div class="container">
-            <div class="row">
-                <div class="span12">
-                    &nbsp;
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="span12">
+                &nbsp;
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="span10 offset1">
-                    <form wicket:id="form">
-                        <div class="row">
-                            <div class="span10 well">
-                                <div wicket:id="bc"/>
-                                <input type="submit" title="Submit"/>
-                            </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="span10 offset1">
+                <form wicket:id="form">
+                    <div class="row">
+                        <div class="span10 well">
+                            <div wicket:id="bc"/>
+                            <input wicket:id="submit" type="button"/>
                         </div>
-                    </form>
+                    </div>
+                </form>
 
-                </div>
             </div>
         </div>
-    </wicket:extend>
+    </div>
+</wicket:extend>
 </body>
 </html>                                                   1
