Tested CDF plugin (concatenate the scripts, resolved the conflicts). (ODAEU-15)

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/ReportsPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/ReportsPage.html
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
-<head>
-
-</head>
+<wicket:head>
+	<script>
+		console.log('test script');
+	</script>
+</wicket:head>
 <body>
 <wicket:extend>
-    Test Ionut
+    test message
 </wicket:extend>
 </body>
 </html>
