--- a/eudevfin/cdf-wrapper/src/test/resources/js/testCDF.html
+++ b/eudevfin/cdf-wrapper/src/test/resources/js/testCDF.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JavaScript Test CDF plugin</title>
-        
-        <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Test CDF plugin</title>
 
-        <script src="../../../../src/main/resources/js/cdfplugin.js"></script>
-    </head>
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 
-    <body>
-        
-    </body>
+    <script src="../../../main/webapp/js/cdfplugin.js"></script>
+</head>
+
+<body>
+
+</body>
 </html>
