--- a/eudevfin/cdf-wrapper/src/test/resources/js/testCDF.html
+++ b/eudevfin/cdf-wrapper/src/test/resources/js/testCDF.html
@@ -7,9 +7,142 @@
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 
     <script src="../../../main/webapp/js/cdfplugin.js"></script>
+
+    <style>
+        .loading-bar {
+            display: none;
+        }
+
+        .loading-bar.is-active {
+            display: block;
+            font-size: 20px;
+            width: 10em;
+            height: 1em;
+            border-radius: .5em;
+            background: rgba(255,255,255,0.6);
+            box-shadow: 
+                0 0 0 .05em rgba(100,100,100,0.075),
+                0 0 0 .25em rgba(0,0,0,0.1),
+                inset 0 .1em .05em rgba(0,0,0,0.1),
+                0 .05em rgba(255,255,255,0.7);
+
+            position: fixed;
+            top: 40%;
+            margin-top: -0.5em;
+            left: 50%;
+            margin-left: -5em;
+            z-index: 100;
+        }
+
+        .loading-bar.is-active:after {
+            content: "Loading...";
+            position: absolute;
+            left: 25%;
+            top: 150%;
+            font-size: 1em;
+            color: #555;
+            text-shadow: 0 .05em rgba(255,255,255,0.7);
+        }
+
+        .loading-bar .sphere {
+            border-radius: 50%;
+            width: 1em;
+            height: 100%;
+            background: -webkit-linear-gradient(#eee, #ddd);
+            background: -moz-linear-gradient(#eee, #ddd);
+            background: -ms-linear-gradient(#eee, #ddd);
+            background: -o-linear-gradient(#eee, #ddd);
+            background: linear-gradient(#eee, #ddd);
+            box-shadow:
+                inset 0 .15em .1em rgba(255,255,255,0.3),
+                inset 0 -.1em .15em rgba(0,0,0,0.15),
+                0 0 .25em rgba(0,0,0,0.3);
+            display: block;
+            -webkit-animation: slide 1.5s ease-in-out infinite alternate;
+            -moz-animation: slide 1.5s ease-in-out infinite alternate;
+            -ms-animation: slide 1.5s ease-in-out infinite alternate;
+            -o-animation: slide 1.5s ease-in-out infinite alternate;
+            animation: slide 1.5s ease-in-out infinite alternate;
+        }
+
+        @-webkit-keyframes slide {
+            to { margin-left: 90%; }
+        }
+
+        @-moz-keyframes slide {
+            to { margin-left: 90%; }
+        }
+
+        @-ms-keyframes slide {
+            to { margin-left: 90%; }
+        }
+
+        @-o-keyframes slide {
+            to { margin-left: 90%; }
+        }
+
+        @keyframes slide {
+            to { margin-left: 90%; }
+        }
+    </style>
+
+    <script>
+        var pathToCdaFile = '/some/path.cda';
+        var paramTestSelector;
+
+        testSelector = {
+            name: "testSelector",
+            parameter: "paramTestSelector",
+            htmlObject: "test-selector",
+            type: "select",
+            parameters: [],
+            valueAsId: true,
+            executeAtStart: true,
+            queryDefinition: {
+                dataAccessId: "testSelector", 
+                path: pathToCdaFile
+            },
+            preChange: function (value) {
+                console.log('>>> preChange');
+
+                return value;
+            },
+            postFetch: function (values) {
+                console.log('>>> postFetch');
+
+                return values;
+            },
+            preExecution: function () {
+                console.log('>>> preExecution');
+
+                return undefined;
+            },
+            postExecution: function () {
+                console.log('>>> postExecution');                    
+            }
+        };
+
+        // The components to be loaded into the dashboard withing the [] separated by ,
+        var components = [testSelector];
+
+        // The initial dashboard load function definition
+        var load = function () {
+            Dashboards.init(components);
+        };
+
+        // The initial dashboard load function execution
+        load();
+    </script>
 </head>
 
 <body>
+    <div class="loading-bar">
+        <i class="sphere"></i>
+    </div>
 
+    <div>
+        <h2>Test CDF Plugin</h2>
+        <div id="test-selector"></div>
+    </div>
 </body>
 </html>
