dim: for loans only section

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/SupplementaryDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/SupplementaryDataTab.html
@@ -17,6 +17,8 @@
         <div class="span4">
             <div wicket:id="16geographicalTargetArea"/>
             <div wicket:id="17startingDate"/>
+        </div>
+        <div class="span4">
             <div wicket:id="18completionDate"/>
             <div wicket:id="19description"/>
         </div>
