dim: for loans only section

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/IdentificationDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/IdentificationDataTab.html
@@ -16,6 +16,7 @@
     <div class="row">
         <div class="span4">
             <div wicket:id="1reportingYear" />
+            <div wicket:id="1bCommitmentDate" />
             <div wicket:id="2reportingCountry" />
             <div wicket:id="3extendingAgency"/>
         </div>
