dim: warnings cleanup

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/VolumeDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/VolumeDataTab.html
@@ -15,8 +15,28 @@
 <wicket:panel>
     <div class="row">
         <div class="span4">
+            <div wicket:id="32currency" />
         </div>
         <div class="span4">
+        </div>
+        <div class="span4">
+            <div wicket:id="33commitments" />
+            <div wicket:id="34amountsExtended" />
+            <div wicket:id="35amountsReceived" />
+        </div>
+        <div class="span4">
+            <wicket:child/>
+        </div>
+        <div class="span4">
+            <div wicket:id="36amountUntied" />
+            <div wicket:id="37amountPartiallyUntied" />
+            <div wicket:id="38amountTied" />
+            <div wicket:id="39amountOfIRTC" />
+        </div>
+        <div class="span4">
+            <div wicket:id="40amountOfExpertsCommitments" />
+            <div wicket:id="41amountOfExpertsExtended" />
+            <div wicket:id="42amountOfExportCredit" />
         </div>
     </div>
 
