Integrated Highcharts lib. (ODAEU-15)

--- a/eudevfin/cdf-wrapper/src/test/resources/js/testCDF.html
+++ b/eudevfin/cdf-wrapper/src/test/resources/js/testCDF.html
@@ -21,6 +21,9 @@
     <!-- load CDF javascript file -->
     <script src="../../../main/webapp/js/cdfplugin.js"></script>
 
+    <script src="../../../main/webapp/js/Highcharts-3.0.7/js/highcharts.js"></script>
+    <script src="../../../main/webapp/js/Highcharts-3.0.7/js/modules/exporting.js"></script>
+
     <script>
         var pathToCdaFile = '/some/path.cda';
         var testTableDefinition,
