Changes to spring and wicket to support request scope and locale

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/HomePage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/HomePage.html
@@ -21,9 +21,9 @@
             <tr>
                 <td>Transaction id</td>
                 <td>Transaction value</td>
+                <td>Transaction description</td>
                 <td>Organization name</td>
             </tr>
-            <!--
 			<tr wicket:id="transaction-list">
 				<td>
 					<span wicket:id="transaction-id">-1</span>
@@ -32,9 +32,12 @@
 					<span wicket:id="transaction-value">0</span>
 				</td>
 				<td>
+					<span wicket:id="transaction-description">unspecified</span>
+				</td>
+				<td>
 					<span wicket:id="organization-name">unspecified</span>
 				</td>
-			</tr>-->
+			</tr>
         </table>
     </div>
 </wicket:extend>
