--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
@@ -19,13 +19,32 @@
 
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="span12">
+        	<div class="span11"></div>
+            <div class="span11">
                 <h2>Test CDF Plugin</h2>
                 <div class="box">
                     <div class="box-header">
                         <h2>Financial Transactions</h2>
                     </div>
                     <div id="test-table"></div>
+                </div>
+            </div>
+            <div class="span11">
+                <h2>Pie Chart</h2>
+                <div class="box">
+                    <div class="box-header">
+                        <h2>Pie Chart</h2>
+                    </div>
+                    <div id="pie-chart"></div>
+                </div>
+            </div>
+            <div class="span11">
+                <h2>Column Chart</h2>
+                <div class="box">
+                    <div class="box-header">
+                        <h2>Column Chart</h2>
+                    </div>
+                    <div id="column-chart"></div>
                 </div>
             </div>
         </div>  <!-- /row-fluid -->
