--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
@@ -17,10 +17,9 @@
         <i class="sphere"></i>
     </div>	<!-- used for loading animation instead of blockUI js library -->
 
-    <div class="container-fluid">
-        <div class="row-fluid">
-        	<div class="span11"></div>
-            <div class="span11">
+    <div class="container">
+        <div class="row">
+            <div class="span12">
                 <h2>Test CDF Plugin</h2>
                 <div class="box">
                     <div class="box-header">
@@ -29,7 +28,7 @@
                     <div id="test-table"></div>
                 </div>
             </div>
-            <div class="span11">
+            <div class="span12">
                 <h2>Pie Chart</h2>
                 <div class="box">
                     <div class="box-header">
@@ -38,7 +37,7 @@
                     <div id="pie-chart"></div>
                 </div>
             </div>
-            <div class="span11">
+            <div class="span12">
                 <h2>Column Chart</h2>
                 <div class="box">
                     <div class="box-header">
@@ -47,8 +46,8 @@
                     <div id="column-chart"></div>
                 </div>
             </div>
-        </div>  <!-- /row-fluid -->
-    </div>   <!-- /container-fluid -->
+        </div>  <!-- /row -->
+    </div>   <!-- /container -->
 </wicket:extend>
 </body>
 </html>
