Added new dashboards. (ODAEU-15)

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
@@ -19,8 +19,15 @@
 
     <div class="container">
         <div class="row">
+        	<div class="span12">
+                <h2>Filters</h2>
+                <div class="box">
+                    <div id="sector-list"></div>
+                    <div id="organization-list"></div>
+                </div>
+            </div>
             <div class="span12">
-                <h2>Test CDF Plugin</h2>
+                <h2>Table dashboard</h2>
                 <div class="box">
                     <div class="box-header">
                         <h2>Financial Transactions</h2>
@@ -44,6 +51,15 @@
                         <h2>Column Chart</h2>
                     </div>
                     <div id="column-chart"></div>
+                </div>
+            </div>
+            <div class="span12">
+                <h2>Stacked Bar Chart</h2>
+                <div class="box">
+                    <div class="box-header">
+                        <h2>Stacked Bar Chart</h2>
+                    </div>
+                    <div id="stackedbar-chart"></div>
                 </div>
             </div>
         </div>  <!-- /row -->
