--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/ForLoansOnlyTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/ForLoansOnlyTab.html
@@ -5,9 +5,6 @@
   ~ are made available under the terms of the GNU Public License v3.0
   ~ which accompanies this distribution, and is available at
   ~ http://www.gnu.org/licenses/gpl.html
-  ~
-  ~ Contributors:
-  ~    aartimon
   -->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
@@ -15,26 +12,29 @@
 <wicket:panel>
     <div class="row">
         <div class="span4">
-            <div wicket:id="44typeOfRepayment" />
-            <div wicket:id="45numberOfRepayments" />
-            <div wicket:id="46interestRate" />
+            <div wicket:id="44typeOfRepayment"/>
+            <div wicket:id="45numberOfRepayments"/>
+            <div wicket:id="46interestRate"/>
         </div>
         <div class="span4">
-            <div wicket:id="47secondInterestRate" />
-            <div wicket:id="48firstRepaymentDate" />
-            <div wicket:id="49finalRepaymentDate" />
+            <div wicket:id="47secondInterestRate"/>
+            <div wicket:id="48firstRepaymentDate"/>
+            <div wicket:id="49finalRepaymentDate"/>
         </div>
     </div>
     <div class="row">
         <div class="span4">
-            <div wicket:id="50interestReceived" />
-            <div wicket:id="51principalDisbursed" />
-            <div wicket:id="52arrearsOfPrincipals" />
-            <div wicket:id="53arrearsOfInterest" />
+            <div wicket:id="50interestReceived"/>
+            <div wicket:id="51principalDisbursed"/>
+            <div wicket:id="52arrearsOfPrincipals"/>
+            <div wicket:id="53arrearsOfInterest"/>
         </div>
         <div class="span4">
+            <wicket:child/>
+            <!--
             <div wicket:id="54futureDebtPrincipal" />
             <div wicket:id="54futureDebtInterest" />
+            -->
         </div>
     </div>
 
