--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/SupplementaryDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/SupplementaryDataTab.html
@@ -5,9 +5,6 @@
   ~ are made available under the terms of the GNU Public License v3.0
   ~ which accompanies this distribution, and is available at
   ~ http://www.gnu.org/licenses/gpl.html
-  ~
-  ~ Contributors:
-  ~    aartimon
   -->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
@@ -26,34 +23,43 @@
     </div>
     <div class="row">
         <div class="span4">
-            <h3><wicket:message key="policyObjectives.label"/></h3>
+            <h3>
+                <wicket:message key="policyObjectives.label"/>
+            </h3>
             <div wicket:id="20genderEquality"/>
             <div wicket:id="21aidToEnvironment"/>
             <div wicket:id="22pdGg"/>
             <div wicket:id="23tradeDevelopment"/>
         </div>
         <div class="span4">
-            <h3><wicket:message key="typeOfAid.label"/></h3>
+            <h3>
+                <wicket:message key="typeOfAid.label"/>
+            </h3>
             <div wicket:id="24freestandingTechnicalCooperation"/>
-            <div wicket:id="25programbasedApproach"/>
+            <div wicket:id="25programmeBasedApproach"/>
             <div wicket:id="26investmentProject"/>
             <div wicket:id="27associatedFinancing"/>
         </div>
     </div>
     <div class="row">
         <div class="span4">
-            <h3><wicket:message key="rioMarkers.label"/></h3>
+            <h3>
+                <wicket:message key="rioMarkers.label"/>
+            </h3>
             <div wicket:id="28biodiversity"/>
             <div wicket:id="29ccMitigation"/>
             <div wicket:id="30ccAdaptation"/>
             <div wicket:id="31desertification"/>
         </div>
         <div class="span4">
+            <wicket:child/>
+            <!--
             <h3><wicket:message key="otherMarkers.label"/></h3>
             <div wicket:id="96tbd"/>
             <div wicket:id="97tbd"/>
             <div wicket:id="98tbd"/>
             <div wicket:id="99tbd"/>
+            -->
         </div>
     </div>
 
