Adding the last transactions table on desktop page

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/HomePage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/HomePage.html
@@ -16,8 +16,16 @@
 </head>
 <body>
 <wicket:extend>
-    <div>
-        <table id="settings">
+	<div class="container">
+		<div class="row"><div class="span12">&nbsp;</div></div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="span10 offset1 well" wicket:id="tops-panel"></div>
+		</div>
+	</div>
+<!--    <div>
+         <table id="settings">
             <tr>
                 <td>Transaction id</td>
                 <td>Transaction value</td>
@@ -39,7 +47,7 @@
 				</td>
 			</tr>
         </table>
-    </div>
+    </div> -->
 </wicket:extend>
 </body>
 </html>
