--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/IdentificationDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/IdentificationDataTab.html
@@ -5,9 +5,6 @@
   ~ are made available under the terms of the GNU Public License v3.0
   ~ which accompanies this distribution, and is available at
   ~ http://www.gnu.org/licenses/gpl.html
-  ~
-  ~ Contributors:
-  ~    aartimon
   -->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
@@ -15,18 +12,17 @@
 <wicket:panel>
     <div class="row">
         <div class="span4">
-            <div wicket:id="input" />
-            <div wicket:id="email" />
-            <div wicket:id="date" />
-
+            <div wicket:id="1reportingYear"/>
+            <div wicket:id="1bCommitmentDate"/>
+            <div wicket:id="2reportingCountry"/>
+            <div wicket:id="3extendingAgency"/>
         </div>
         <div class="span4">
-            <div wicket:id="dropdown" />
-            <div wicket:id="multi" />
-            <div wicket:id="checkbox"/>
+            <div wicket:id="4crsId"/>
+            <div wicket:id="5donorProjectNumber"/>
+            <div wicket:id="6natureSubmission"/>
         </div>
     </div>
-
 </wicket:panel>
 </body>
 </html>
