dim: isolated CRS transaction page in the crs package and added the CustomTransactionPage with the extended tabs in the custom package

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/BasicDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/BasicDataTab.html
@@ -13,9 +13,7 @@
     <div class="row">
         <div class="span4">
             <div wicket:id="7recipient"/>
-            <!--
-            <div wicket:id="7bCPA"/>
-            -->
+            <wicket:child/>
             <div wicket:id="8channelDelivery"/>
             <div wicket:id="9channelCode"/>
             <div wicket:id="10bilateralMultilateral"/>
