dim: custom transaction - added new fields in the identification data tab

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/IdentificationDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/IdentificationDataTab.html
@@ -12,6 +12,7 @@
 <wicket:panel>
     <div class="row">
         <div class="span4">
+            <wicket:child/>
             <div wicket:id="1reportingYear"/>
             <div wicket:id="1bCommitmentDate"/>
             <div wicket:id="2reportingCountry"/>
