dim: custom transaction - added fields up to basicdatatab for the CRS++ transaction

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/BasicDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/BasicDataTab.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="span4">
             <div wicket:id="7recipient"/>
-            <wicket:child/>
+            <div wicket:id="extensionPanel1"/>
             <div wicket:id="8channelDelivery"/>
             <div wicket:id="9channelCode"/>
             <div wicket:id="10bilateralMultilateral"/>
@@ -25,6 +25,8 @@
             <div wicket:id="14activityProjectTitle"/>
             <div wicket:id="15sectorPurposeCode"/>
         </div>
+        <div wicket:id="extensionPanel2"/>
+        <wicket:child/>
     </div>
 
 </wicket:panel>
