--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomBasicDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomBasicDataTab.html
@@ -10,7 +10,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
 <wicket:extend>
-    <div wicket:id="7bCPA"/>
+
+    <wicket:fragment wicket:id="extension1">
+        <div wicket:id="7bCPA"/>
+    </wicket:fragment>
+    <wicket:fragment wicket:id="extension2">
+        <div wicket:id="14bisUploadDocumentation"/>
+        <div wicket:id="14aProjectCoFinanced"/>
+        <div wicket:id="14b1stAgency"/>
+        <div wicket:id="14c1stAgencyAmount"/>
+        <div wicket:id="14d1stAgencyCurrency"/>
+        <div wicket:id="14e2ndAgency"/>
+        <div wicket:id="14f2ndAgencyAmount"/>
+        <div wicket:id="14g2ndAgencyCurrency"/>
+        <div wicket:id="14h3rdAgency"/>
+        <div wicket:id="14i3rdAgencyAmount"/>
+        <div wicket:id="14j3rdAgencyCurrency"/>
+    </wicket:fragment>
 </wicket:extend>
 </body>
 </html>
