dim: custom transaction - custom Supplementary Data Tab for the CRS++ transaction

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomSupplementaryDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomSupplementaryDataTab.html
@@ -14,7 +14,7 @@
         <h3>
             <wicket:message key="otherMarkers.label"/>
         </h3>
-        <!--<div wicket:id="96tbd"/>-->
+        <div wicket:id="96rmnch"/>
     </div>
 </wicket:extend>
 </body>
