dim: custom transaction - custom Volume Data Tab for the CRS++ transaction

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/VolumeDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/VolumeDataTab.html
@@ -14,8 +14,8 @@
         <div class="span4">
             <div wicket:id="32currency"/>
         </div>
-        <div class="span4">
-        </div>
+    </div>
+    <div class="row">
         <div class="span4">
             <div wicket:id="33commitments"/>
             <div wicket:id="34amountsExtended"/>
@@ -24,6 +24,8 @@
         <div class="span4">
             <wicket:child/>
         </div>
+    </div>
+    <div class="row">
         <div class="span4">
             <div wicket:id="36amountUntied"/>
             <div wicket:id="37amountPartiallyUntied"/>
