--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomBasicDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomBasicDataTab.html
@@ -11,21 +11,44 @@
 <body>
 <wicket:extend>
 
+    <wicket:fragment wicket:id="extension3">
+        <div class="row">
+            <div class="span4">
+                <div wicket:id="7aRecipientCode"/>
+            </div>
+            <div class="span4">
+                <div wicket:id="7cPriorityStatus"/>
+            </div>
+        </div>
+    </wicket:fragment>
     <wicket:fragment wicket:id="extension1">
         <div wicket:id="7bCPA"/>
+        <div wicket:id="7dPhasingOutYear"/>
     </wicket:fragment>
     <wicket:fragment wicket:id="extension2">
-        <div wicket:id="14bisUploadDocumentation"/>
-        <div wicket:id="14aProjectCoFinanced"/>
-        <div wicket:id="14b1stAgency"/>
-        <div wicket:id="14c1stAgencyAmount"/>
-        <div wicket:id="14d1stAgencyCurrency"/>
-        <div wicket:id="14e2ndAgency"/>
-        <div wicket:id="14f2ndAgencyAmount"/>
-        <div wicket:id="14g2ndAgencyCurrency"/>
-        <div wicket:id="14h3rdAgency"/>
-        <div wicket:id="14i3rdAgencyAmount"/>
-        <div wicket:id="14j3rdAgencyCurrency"/>
+        <div class="row">
+            <div class="span4">
+                <div wicket:id="14bisUploadDocumentation"/>
+            </div>
+            <div class="span4">
+                <div wicket:id="14aProjectCoFinanced"/>
+            </div>
+            <div class="span4">
+                <div wicket:id="14b1stAgency"/>
+                <div wicket:id="14c1stAgencyAmount"/>
+                <div wicket:id="14d1stAgencyCurrency"/>
+            </div>
+            <div class="span4">
+                <div wicket:id="14e2ndAgency"/>
+                <div wicket:id="14f2ndAgencyAmount"/>
+                <div wicket:id="14g2ndAgencyCurrency"/>
+            </div>
+            <div class="span4">
+                <div wicket:id="14h3rdAgency"/>
+                <div wicket:id="14i3rdAgencyAmount"/>
+                <div wicket:id="14j3rdAgencyCurrency"/>
+            </div>
+        </div>
     </wicket:fragment>
 </wicket:extend>
 </body>
