--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/VolumeDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/VolumeDataTab.html
@@ -22,9 +22,10 @@
             <div wicket:id="35amountsReceived"/>
         </div>
         <div class="span4">
-            <wicket:child/>
+            <wicket:container wicket:id="extensionPanel1"/>
         </div>
     </div>
+    <wicket:container wicket:id="extensionPanel2"/>
     <div class="row">
         <div class="span4">
             <div wicket:id="36amountUntied"/>
@@ -38,7 +39,7 @@
             <div wicket:id="42amountOfExportCredit"/>
         </div>
     </div>
-
+    <wicket:child/>
 </wicket:panel>
 </body>
 </html>
