--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomBasicDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomBasicDataTab.html
@@ -33,20 +33,71 @@
             <div class="span4">
                 <div wicket:id="14aProjectCoFinanced"/>
             </div>
-            <div class="span4">
-                <div wicket:id="14b1stAgency"/>
-                <div wicket:id="14c1stAgencyAmount"/>
-                <div wicket:id="14d1stAgencyCurrency"/>
-            </div>
-            <div class="span4">
-                <div wicket:id="14e2ndAgency"/>
-                <div wicket:id="14f2ndAgencyAmount"/>
-                <div wicket:id="14g2ndAgencyCurrency"/>
-            </div>
-            <div class="span4">
-                <div wicket:id="14h3rdAgency"/>
-                <div wicket:id="14i3rdAgencyAmount"/>
-                <div wicket:id="14j3rdAgencyCurrency"/>
+        </div>
+        <div class="row">
+            <div class="span8">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>
+                            <wicket:message key="14table.cofinancingAgency"/>
+                        </th>
+                        <th>
+                            <wicket:message key="14table.name"/>
+                        </th>
+                        <th>
+                            <wicket:message key="14table.amount"/>
+                        </th>
+                        <th>
+                            <wicket:message key="14table.currency"/>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <wicket:message key="14table.1stAgency"/>
+                        </td>
+                        <td>
+                            <div wicket:id="14b1stAgency"/>
+                        </td>
+                        <td>
+                            <div wicket:id="14c1stAgencyAmount"/>
+                        </td>
+                        <td>
+                            <div wicket:id="14d1stAgencyCurrency"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <wicket:message key="14table.2ndAgency"/>
+                        </td>
+                        <td>
+                            <div wicket:id="14e2ndAgency"/>
+                        </td>
+                        <td>
+                            <div wicket:id="14f2ndAgencyAmount"/>
+                        </td>
+                        <td>
+                            <div wicket:id="14g2ndAgencyCurrency"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <wicket:message key="14table.3rdAgency"/>
+                        </td>
+                        <td>
+                            <div wicket:id="14h3rdAgency"/>
+                        </td>
+                        <td>
+                            <div wicket:id="14i3rdAgencyAmount"/>
+                        </td>
+                        <td>
+                            <div wicket:id="14j3rdAgencyCurrency"/>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </wicket:fragment>
