--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/UsersPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/UsersPage.html
@@ -22,6 +22,15 @@
         <div class="row">
             <div class="span10 offset1">
                 <form wicket:id="form">
+                    <div class="row">
+                        <div class="span10 well">
+                           <div wicket:id="username"/>
+                           <div wicket:id="password"/>
+                           <div wicket:id="enabled"/>
+                           <div wicket:id="authorities"/>
+                           <input wicket:id="submit" type="button"/>
+                        </div>
+                    </div>
                 </form>
 
             </div>
@@ -29,4 +38,4 @@
     </div>
 </wicket:extend>
 </body>
-</html>                                                   1
+</html>                                                   
