Added new wicket components.

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
@@ -53,10 +53,7 @@
                     <wicket:message key="dashboards.pieChart"/>
                 </h2>
                 <div class="box">
-                    <div class="box-header">
-                        <h2>Pie Chart</h2>
-                    </div>
-                    <div id="pie-chart"></div>
+                	<div wicket:id="pieChart"/>
                 </div>
             </div>
             <div class="span12">
@@ -64,10 +61,7 @@
                     <wicket:message key="dashboards.columnChart"/>
                 </h2>
                 <div class="box">
-                    <div class="box-header">
-                        <h2>Column Chart</h2>
-                    </div>
-                    <div id="column-chart"></div>
+                	<div wicket:id="columnsChart"/>
                 </div>
             </div>
             <div class="span12">
@@ -75,10 +69,7 @@
                     <wicket:message key="dashboards.stackedBarChart"/>
                 </h2>
                 <div class="box">
-                    <div class="box-header">
-                        <h2>Stacked Bar Chart</h2>
-                    </div>
-                    <div id="stackedbar-chart"></div>
+                	<div wicket:id="stackedBarChart"/>
                 </div>
             </div>
         </div>
