Export multiple highcharts dashboards. Export tables as PDF/Excel files.

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/reports/ReportsPage.html
@@ -24,6 +24,13 @@
     <!-- used for loading animation instead of blockUI js library -->
 
     <div class="container">
+    	<br/><br/>
+    	<div class="row">
+    		<div class="span6 offset5">
+    			<button id="export-all" class="btn btn-large btn-success" type="button">Export all charts</button>
+    		</div>
+    	</div>
+    	
         <div class="row">
             <div class="span12">
                 <h2>
