Added reports export page.

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsExport.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsExport.html
@@ -29,9 +29,9 @@
 						</div>
 					</div>
 					<div class="control-group">
-						<label class="control-label" for="exportType">Export Type</label>
+						<label class="control-label" for="outputType">Output Type</label>
 						<div class="controls">
-							<select id="exportType" name="exportType" class="span3">
+							<select id="outputType" name="outputType" class="span3">
 								<option value="pdf">PDF</option>
 								<option value="excel">Excel</option>
 								<option value="html">HTML</option>
