usergroup added to user manager

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditUserPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditUserPage.html
@@ -28,6 +28,7 @@
                            <div wicket:id="password"/>
                            <div wicket:id="enabled"/>
                            <div wicket:id="authorities"/>
+                           <div wicket:id="groups"/>
                            <input wicket:id="submit" type="button"/>
                         </div>
                     </div>
