dim: permissions done for CustomTransaction

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -22,8 +22,13 @@
         <div class="row">
             <div class="span10 offset1">
                 <form wicket:id="form">
+                    <div class="row">
+                        <div class="span10 well">
+                            <div wicket:id="bc"/>
+                            <input wicket:id="submit" type="button"/>
+                        </div>
+                    </div>
                 </form>
-
             </div>
         </div>
     </div>
