--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomBasicDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomBasicDataTab.html
@@ -34,7 +34,7 @@
                 <div wicket:id="14aProjectCoFinanced"/>
             </div>
         </div>
-        <div class="row">
+        <div class="row" wicket:id="14coFinancing">
             <div class="span8">
                 <table class="table">
                     <thead>
