--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsExport.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsExport.html
@@ -10,6 +10,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <wicket:head>
     <title>Reports Export</title>
+    
+    <script>
+	    function target_popup (form) {
+	    	'use strict';
+	    	
+	        window.open('', 'formpopup', 'width=900,height=600,left=200,top=100,resizeable,scrollbars');
+	        form.target = 'formpopup';
+	    }
+    </script>
 </wicket:head>
 <body>
 <wicket:extend>
@@ -17,7 +26,7 @@
 		<div class="row">
 			<br/><br/>
 			<div class="span6 offset2">
-				<form class="form-horizontal" action="/jasperreports/generate" method="post">
+				<form class="form-horizontal" action="/jasperreports/generate" method="post" onsubmit="target_popup(this)">
 					<div class="control-group">
 						<label class="control-label" for="reportType">Report Type</label>
 						<div class="controls">
@@ -25,6 +34,16 @@
 								<option value="aq">Advanced Questionnaire</option>
 								<option value="dac1">DAC 1</option>
 								<option value="dac2">DAC 2</option>
+							</select>
+						</div>
+					</div>
+					<div class="control-group">
+						<label class="control-label" for="reportYear">Report Year</label>
+						<div class="controls">
+							<select id="reportYear" name="reportYear" class="span3">
+								<option value="2010">2010</option>
+								<option value="2011">2011</option>
+								<option value="2012">2012</option>
 							</select>
 						</div>
 					</div>
