dim: change fields design to reposition when others are hidden

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditUserPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditUserPage.html
@@ -20,16 +20,18 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="span10 offset1">
+            <div class="span8 offset2 well">
                 <form wicket:id="form">
                     <div class="row">
-                        <div class="span10 well">
-                           <div wicket:id="username"/>
-                           <div wicket:id="password"/>
-                           <div wicket:id="enabled"/>
-                           <div wicket:id="authorities"/>
-                           <div wicket:id="groups"/>
-                           <input wicket:id="submit" type="button"/>
+                        <div wicket:id="username"/>
+                        <div wicket:id="password"/>
+                        <div wicket:id="enabled"/>
+                        <div wicket:id="authorities"/>
+                        <div wicket:id="groups"/>
+                    </div>
+                    <div class="row">
+                        <div class="span4">
+                            <input wicket:id="submit" type="button"/>
                         </div>
                     </div>
                 </form>
