--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/SupplementaryDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/SupplementaryDataTab.html
@@ -11,34 +11,33 @@
 <body>
 <wicket:panel>
     <div class="row">
-        <div class="span4">
-            <div wicket:id="16geographicalTargetArea"/>
-            <div wicket:id="17startingDate"/>
-        </div>
-        <div class="span4">
-            <div wicket:id="18completionDate"/>
-            <div wicket:id="19description"/>
-        </div>
-
+        <div wicket:id="16geographicalTargetArea"/>
+        <div wicket:id="17startingDate"/>
+        <div wicket:id="18completionDate"/>
+        <div wicket:id="19description"/>
     </div>
     <div class="row">
         <div class="span4">
             <h3>
                 <wicket:message key="policyObjectives.label"/>
             </h3>
-            <div wicket:id="20genderEquality"/>
-            <div wicket:id="21aidToEnvironment"/>
-            <div wicket:id="22pdGg"/>
-            <div wicket:id="23tradeDevelopment"/>
+            <div class="row">
+                <div wicket:id="20genderEquality"/>
+                <div wicket:id="21aidToEnvironment"/>
+                <div wicket:id="22pdGg"/>
+                <div wicket:id="23tradeDevelopment"/>
+            </div>
         </div>
         <div class="span4">
             <h3>
                 <wicket:message key="typeOfAid.label"/>
             </h3>
-            <div wicket:id="24freestandingTechnicalCooperation"/>
-            <div wicket:id="25programmeBasedApproach"/>
-            <div wicket:id="26investmentProject"/>
-            <div wicket:id="27associatedFinancing"/>
+            <div class="row">
+                <div wicket:id="24freestandingTechnicalCooperation"/>
+                <div wicket:id="25programmeBasedApproach"/>
+                <div wicket:id="26investmentProject"/>
+                <div wicket:id="27associatedFinancing"/>
+            </div>
         </div>
     </div>
     <div class="row">
@@ -46,10 +45,12 @@
             <h3>
                 <wicket:message key="rioMarkers.label"/>
             </h3>
-            <div wicket:id="28biodiversity"/>
-            <div wicket:id="29ccMitigation"/>
-            <div wicket:id="30ccAdaptation"/>
-            <div wicket:id="31desertification"/>
+            <div class="row">
+                <div wicket:id="28biodiversity"/>
+                <div wicket:id="29ccMitigation"/>
+                <div wicket:id="30ccAdaptation"/>
+                <div wicket:id="31desertification"/>
+            </div>
         </div>
         <wicket:child/>
     </div>
