--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomSupplementaryDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomSupplementaryDataTab.html
@@ -14,7 +14,9 @@
         <h3>
             <wicket:message key="otherMarkers.label"/>
         </h3>
-        <div wicket:id="96rmnch"/>
+        <div class="row">
+            <div wicket:id="96rmnch"/>
+        </div>
     </div>
 </wicket:extend>
 </body>
