--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomVolumeDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomVolumeDataTab.html
@@ -16,116 +16,114 @@
         <div wicket:id="34dBudgetActivity"/>
     </wicket:fragment>
     <wicket:fragment wicket:id="extension2">
-        <div class="row">
+        <div class="row" wicket:id="budgetMTEFTable">
             <div class="span8">
-                <div wicket:id="budgetMTEFTable">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>
-                                <wicket:message key="table.budgetMtef"/>
-                            </th>
-                            <th>
-                                <wicket:message key="table.currentYear"/>
-                            </th>
-                            <th>
-                                <wicket:message key="table.currentYearP1"/>
-                            </th>
-                            <th>
-                                <wicket:message key="table.currentYearP2"/>
-                            </th>
-                            <th>
-                                <wicket:message key="table.currentYearP3"/>
-                            </th>
-                            <th>
-                                <wicket:message key="table.currentYearP4"/>
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>
-                                <wicket:message key="table.disbursement"/>
-                            </td>
-                            <td>
-                                <div wicket:id="disbursement"/>
-                            </td>
-                            <td>
-                                <div wicket:id="disbursementP1"/>
-                            </td>
-                            <td>
-                                <div wicket:id="disbursementP2"/>
-                            </td>
-                            <td>
-                                <div wicket:id="disbursementP3"/>
-                            </td>
-                            <td>
-                                <div wicket:id="disbursementP4"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <wicket:message key="table.code"/>
-                            </td>
-                            <td>
-                                <div wicket:id="code"/>
-                            </td>
-                            <td>
-                                <div wicket:id="codeP1"/>
-                            </td>
-                            <td>
-                                <div wicket:id="codeP2"/>
-                            </td>
-                            <td>
-                                <div wicket:id="codeP3"/>
-                            </td>
-                            <td>
-                                <div wicket:id="codeP4"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <wicket:message key="table.line"/>
-                            </td>
-                            <td>
-                                <div wicket:id="line"/>
-                            </td>
-                            <td>
-                                <div wicket:id="lineP1"/>
-                            </td>
-                            <td>
-                                <div wicket:id="lineP2"/>
-                            </td>
-                            <td>
-                                <div wicket:id="lineP3"/>
-                            </td>
-                            <td>
-                                <div wicket:id="lineP4"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <wicket:message key="table.activity"/>
-                            </td>
-                            <td>
-                                <div wicket:id="activity"/>
-                            </td>
-                            <td>
-                                <div wicket:id="activityP1"/>
-                            </td>
-                            <td>
-                                <div wicket:id="activityP2"/>
-                            </td>
-                            <td>
-                                <div wicket:id="activityP3"/>
-                            </td>
-                            <td>
-                                <div wicket:id="activityP4"/>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>
+                            <wicket:message key="table.budgetMtef"/>
+                        </th>
+                        <th>
+                            <wicket:message key="table.currentYear"/>
+                        </th>
+                        <th>
+                            <wicket:message key="table.currentYearP1"/>
+                        </th>
+                        <th>
+                            <wicket:message key="table.currentYearP2"/>
+                        </th>
+                        <th>
+                            <wicket:message key="table.currentYearP3"/>
+                        </th>
+                        <th>
+                            <wicket:message key="table.currentYearP4"/>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <wicket:message key="table.disbursement"/>
+                        </td>
+                        <td>
+                            <div wicket:id="disbursement"/>
+                        </td>
+                        <td>
+                            <div wicket:id="disbursementP1"/>
+                        </td>
+                        <td>
+                            <div wicket:id="disbursementP2"/>
+                        </td>
+                        <td>
+                            <div wicket:id="disbursementP3"/>
+                        </td>
+                        <td>
+                            <div wicket:id="disbursementP4"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <wicket:message key="table.code"/>
+                        </td>
+                        <td>
+                            <div wicket:id="code"/>
+                        </td>
+                        <td>
+                            <div wicket:id="codeP1"/>
+                        </td>
+                        <td>
+                            <div wicket:id="codeP2"/>
+                        </td>
+                        <td>
+                            <div wicket:id="codeP3"/>
+                        </td>
+                        <td>
+                            <div wicket:id="codeP4"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <wicket:message key="table.line"/>
+                        </td>
+                        <td>
+                            <div wicket:id="line"/>
+                        </td>
+                        <td>
+                            <div wicket:id="lineP1"/>
+                        </td>
+                        <td>
+                            <div wicket:id="lineP2"/>
+                        </td>
+                        <td>
+                            <div wicket:id="lineP3"/>
+                        </td>
+                        <td>
+                            <div wicket:id="lineP4"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <wicket:message key="table.activity"/>
+                        </td>
+                        <td>
+                            <div wicket:id="activity"/>
+                        </td>
+                        <td>
+                            <div wicket:id="activityP1"/>
+                        </td>
+                        <td>
+                            <div wicket:id="activityP2"/>
+                        </td>
+                        <td>
+                            <div wicket:id="activityP3"/>
+                        </td>
+                        <td>
+                            <div wicket:id="activityP4"/>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </wicket:fragment>
