added buttons for add new, cancel and several more fields for the user

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditPersistedUserPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditPersistedUserPage.html
@@ -24,6 +24,10 @@
                 <form wicket:id="form">
                     <div class="row">
                         <div wicket:id="username"/>
+                        <div wicket:id="firstName"/>
+                        <div wicket:id="lastName"/>
+                        <div wicket:id="email"/>
+                        <div wicket:id="phone"/>
                         <div wicket:id="password"/>
                         <div wicket:id="enabled"/>
                         <div wicket:id="authorities"/>                        
@@ -31,6 +35,7 @@
                     <div class="row">
                         <div class="span4">
                             <input wicket:id="submit" type="button"/>
+                            <input wicket:id="cancel" type="button"/>
                         </div>
                     </div>
                 </form>
