--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditPersistedUserGroupPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditPersistedUserGroupPage.html
@@ -30,6 +30,7 @@
                     <div class="row">
                         <div class="span4">
                             <input wicket:id="submit" type="button"/>
+                            <input wicket:id="cancel" type="button"/>
                         </div>
                     </div>
                 </form>
