dim: new exchange rate fields

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/VolumeDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/VolumeDataTab.html
@@ -12,6 +12,7 @@
 <wicket:panel>
     <div class="row">
         <div wicket:id="32currency"/>
+        <wicket:container wicket:id="extensionPanel3"/>
     </div>
     <div class="row">
         <div wicket:id="33commitments"/>
