--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomVolumeDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomVolumeDataTab.html
@@ -127,6 +127,11 @@
             </div>
         </div>
     </wicket:fragment>
+    <wicket:fragment wicket:id="extension3">
+        <div wicket:id="32bOtherCurrency"/>
+        <div wicket:id="32cExchangeRate"/>
+    </wicket:fragment>
+
 </wicket:extend>
 </body>
 </html>
