nice notification panel for transaction form

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -30,7 +30,8 @@
                             <input wicket:id="cancel" type="button"/>
                         </div>
                     </div>
-                </form>
+                </form>	
+                <span wicket:id="feedback">feedback</span>
             </div>
         </div>
     </div>
