better user management, one group per user and userdetails populated with bean info. drop the database please

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditPersistedUserPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/EditPersistedUserPage.html
@@ -27,10 +27,11 @@
                         <div wicket:id="firstName"/>
                         <div wicket:id="lastName"/>
                         <div wicket:id="email"/>
+						<div wicket:id="group"/>     
                         <div wicket:id="phone"/>
                         <div wicket:id="password"/>
                         <div wicket:id="enabled"/>
-                        <div wicket:id="authorities"/>                        
+                        <div wicket:id="persistedAuthorities"/>                        
                     </div>
                     <div class="row">
                         <div class="span4">
