--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/ListPersistedUserGroupsPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/admin/ListPersistedUserGroupsPage.html
@@ -5,14 +5,16 @@
   ~ are made available under the terms of the GNU Public License v3.0
   ~ which accompanies this distribution, and is available at
   ~ http://www.gnu.org/licenses/gpl.html
-  ~
-  ~ Contributors:
-  ~    aartimon
   -->
 
-<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
-<properties>
-    <entry key="user.name">User Name</entry>
-    <entry key="group">Group</entry>
-	<entry key="authorities">Authorities</entry>        
-</properties>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<body>
+<wicket:extend>
+<form wicket:id="form">                 
+                  
+<input wicket:id="addNewGroup" type="button"/>
+                    
+</form>
+</wicket:extend>
+</body>
+</html>                                                   
